--- a/src/views/login/login.ejs
+++ b/src/views/login/login.ejs
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('./partials/header.ejs'); %>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iniciar sesion</title>
-  <link rel="stylesheet" href="css/login.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
-</head>
 
 <body>
   <main>
@@ -48,13 +37,4 @@
     </div>
   </main>
 
-  <script src="/js/login.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-</body>
-
-</html>
+  <%- include('./partials/footer.ejs'); %>
