--- a/src/views/register/registerUser.ejs
+++ b/src/views/register/registerUser.ejs
@@ -1,59 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Iniciar sesion</title>
-  <link rel="stylesheet" href="/css/register.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
-</head>
+<%- include('./partials/header.ejs'); %>
 
 <body>
   <main>
     <form id="formRegister" class="registerForm">
-      <div class="register">
-        <h2 class="iniciarS">Registratar un usuario</h2>
+      <div class="register mt-5">
+        <h2>Registrar un usuario</h2>
 
-
-        <div class="mb-3">
+          
           <label for="text" class="form-label">Nombre</label>
           <input type="text" id="name" name="name" required class="form-control">
-        </div>
-
-        <div class="mb-3">
+          
           <label for="text" class="form-label">Apellido</label>
           <input type="text" id="surname" name="surname" required class="form-control">
-        </div>
-
-        <div class="mb-3">
+          
           <label for="email" class="form-label">Correo electrónico</label>
           <input type="text" id="email" name="email" class="form-control" aria-describedby="emailHelp">
-        </div>
-
-        <div class="mb-3">
+          
           <label for="exampleInputPassword1" class="form-label">Contraseña</label>
           <input type="password" id="password" name="password" required class="form-control">
-        </div>
-        <div class="form-check form-switch d-flex justify-content-end pb-3">
-          <input class="form-check-input" type="checkbox" role="switch" name="isAdmin" id="flexSwitchCheckDefault">
+          
           <label class="form-check-label" for="flexSwitchCheckDefault"> isAdmin?</label>
-        </div>
-        <div class="w-100 d-flex justify-content-end p-0">
-          <button type="submit" class="btn btn-primary">Registrar</button>
-        </div>
+          <input class="form-check-input" type="checkbox" role="switch" name="isAdmin" id="flexSwitchCheckDefault">
+          
+
+          <button type="submit" class="btn" >Registrar</button>
+
+
       </div>
     </form>
   </main>
 
-  <script src="./js/registerUser.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-</body>
+<%- include('./partials/footer.ejs'); %>
 
-</html>
+
