Feat: se configuro la redireccion de las paginas

--- a/src/views/userInstitute/index.ejs
+++ b/src/views/userInstitute/index.ejs
@@ -75,7 +75,7 @@
 
         </article>
 
-        <div class="listadocarreras">
+        <div class="listadocarreras pb-5">
             <section class="cuadroCarreras m-1 p-1">
                 <div class="text-center">
                     <h1>Carreras</h1>
@@ -90,7 +90,7 @@
 
                 <div class="listadocarrera m-4">
                     <div class="carrera">
-                        <h3>Licenciatura en Ingeniería de Software</h3>
+                        <h3>Ingeniería en sistemas</h3>
                         <p>Años de Duración: 4</p>
                         <p>Modalidad: Presencial</p>
                         <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
