Muchos cambios xd

--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -74,7 +74,7 @@ footer {
   margin-top: 2%;
 }
 
-.containerBienvenida {
+.section {
   text-align: center;
   display: flex;
   justify-content: center;
