--- a/src/views/userInstitute/index.ejs
+++ b/src/views/userInstitute/index.ejs
@@ -27,8 +27,7 @@
 
         <div class="botones justify-content-center">
             <button type="button" class="btn-sm boton m-2"><a href="">Editar perfil</a></button>
-            <button type="button" class="btn-sm boton m-2"><a href="/register/register.html">Cerrar
-                    sesión</a></button>
+            <button type="button" class="btn-sm boton m-2" id="btnLogout">Logout</button>
         </div>
 
         <article>
@@ -114,5 +113,7 @@
 
             </section>
     </main>
+    <script src="/js/instituteProfile.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <%- include('./partials/footer.ejs'); %>
