--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -1,81 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Alegreya+Sans:300);
 body {
-  font-family: "Alegreya Sans", sans-serif;
-}
-
-.register {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
-  border: 15px solid white;
-  border-radius: 10px;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
+}
+main {
   background: linear-gradient(#88b5d8, #899faf, #a7b8c5, white);
+  height: 100%;
 }
-
-@media screen and (max-width: 768px) {
-  .register {
-    width: 70%;
-  }
-}
-@media screen and (max-width: 512px) {
-  .register {
-    width: 90%;
-  }
-}
-
-button {
-  font-size: 18px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  display: inline-block;
-  text-align: center;
-  font-weight: bold;
-  padding: 0.7em 2em;
-  border: 3px solid #88b5d8;
-  border-radius: 2px;
-  position: relative;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
-  color: #88b5d8;
-  text-decoration: none;
-  transition: 0.3s ease all;
-  z-index: 1;
-}
-
-button:before {
-  transition: 0.5s all ease;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  right: 50%;
-  bottom: 0;
-  opacity: 0;
-  content: "";
-  background-color: #88b5d8;
-  z-index: -1;
-  border-radius: 5px;
-}
-
-button:hover,
-button:focus {
-  color: white;
-}
-
-button:hover:before,
-button:focus:before {
-  transition: 0.5s all ease;
-  left: 0;
-  right: 0;
-  opacity: 1;
-}
-
-button:active {
-  transform: scale(0.9);
+form {
+  background-color: white;
+  height: fit-content;
+  padding: 1.5rem;
+  margin: 2rem;
+  border-radius: 0.8rem;
+  width: 25rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
