--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -8,7 +8,6 @@
     <title>Administrar usuarios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -16,14 +15,16 @@
         <div class="row mt-5">
             <h1 class="text-center border-bottom">Lista de usuarios</h1>
             <div class="col">
-                <div class="col-md-3 mb-2">
-                    <a href="/registro-usuario" class="btn btn-sm btn-primary">Nuevo usuario </a>
-                    <a href="/" class="btn btn-info text-light">Inicio</a>
-                    
+                <div class="col-md-3 mb-2 d-flex justify-content-between w-100">
+                    <div>
+                        <a href="/registro-usuario" class="btn btn-primary">Nuevo usuario </a>
+                        <a href="/" class="btn btn-info text-light">Inicio</a>
+                    </div>
+                    <button class="btn btn-dark" id="btnLogout">Logout</button>
                 </div>
                 <table class="table">
                     <thead>
-                        
+
                         <tr>
                             <th>Id</th>
                             <th>Nombre</th>
@@ -49,21 +50,23 @@
                                 </td>
                                 <td>
                                     <button class="btn btn-sm btn-danger" data-id="<%= user.id %>"
-                                        onclick="eliminarReserva(event)">Eliminar</button> <!-- Corregí el botón eliminar -->
+                                        onclick="eliminarReserva(event)">Eliminar</button>
+                                    <!-- Corregí el botón eliminar -->
                                     <a href="<%= `/editar-usuario/${user.id}` %>" class="btn btn-warning">Editar</a>
-                                </td>                                
+                                </td>
                             </tr>
-                        <% }) %>
+                            <% }) %>
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
 
-<script src="/js/admin.js"></script>
+    <script src="/js/admin.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
