--- a/src/views/home/partials/header.ejs
+++ b/src/views/home/partials/header.ejs
@@ -1,102 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/home.css" />
-    <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-  </head>
 
-<<<<<<< HEAD
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Inicio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/home.css">
-  <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./css/home.css" />
+  <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-  <header id="cabecera" class="d-flex justify-content-between align-content-center">
-    <nav aria-label="breadcrumb d-flex align-content-center">
-      <ol class="breadcrumb p-2 m-0 ps-3 d-flex justify-content-between">
-        <li class="breadcrumb-item">
-          <a class="navbar-brand" href="/">
-            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home-2" width="32" height="32"
-              viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none" stroke-linecap="round"
-              stroke-linejoin="round">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
-              <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
-              <path d="M10 12h4v4h-4z" />
-            </svg> </a>
-        </li>
-      </ol>
+  <header>
+    <nav>
+      <div class="mt-5 mb-5">
+        <a href="/" class="material-symbols-outlined"> home </a>
+      </div>
+
+      <div>
+        <a href="/preguntas-frecuentes" class="material-symbols-outlined">
+          quiz
+        </a>
+      </div>
+
+      <div>
+        <a href="/busqueda" class="material-symbols-outlined">
+          travel_explore
+        </a>
+      </div>
+      <div>
+        <a href="/iniciar-sesion" class="material-symbols-outlined">
+          login
+        </a>
+      </div>
     </nav>
-    <div class="preguntas-frecuentes">
-      <a href="/iniciar-sesion" class="pe-3"><svg xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-user-plus" width="32" height="32" viewBox="0 0 24 24" stroke-width="2"
-          stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0" />
-          <path d="M16 19h6" />
-          <path d="M19 16v6" />
-          <path d="M6 21v-2a4 4 0 0 1 4 -4h4" />
-        </svg></a>
-      <a href="/preguntas-frecuentes"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-help"
-          width="32" height="32" viewBox="0 0 24 24" stroke-width="2" stroke="#ffffff" fill="none"
-          stroke-linecap="round" stroke-linejoin="round">
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
-          <path d="M12 17l0 .01" />
-          <path d="M12 13.5a1.5 1.5 0 0 1 1 -1.5a2.6 2.6 0 1 0 -3 -4" />
-        </svg></a>
-    </div>
   </header>
+</body>
 
-  <script src="/js/admin.js"></script>
-=======
-  <body>
-    <header>
-      <nav>
-        <div class="mt-5 mb-5">
-          <a href="/" class="material-symbols-outlined"> home </a>
-        </div>
-
-        <div>
-          <a href="/preguntas-frecuentes" class="material-symbols-outlined">
-            quiz
-          </a>
-        </div>
-
-        <div>
-          <a href="/busqueda" class="material-symbols-outlined">
-            travel_explore
-          </a>
-        </div>
-        <div>
-          <a href="/iniciar-sesion" class="material-symbols-outlined">
-            login
-          </a>
-        </div>
-      </nav>
-    </header>
-  </body>
 </html>
->>>>>>> rios
