--- a/src/views/register/register.ejs
+++ b/src/views/register/register.ejs
@@ -2,83 +2,43 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>UK</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/register.css" />
-  <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>University of Knowledge</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/register.css">
+    <link rel="icon" href="./img/home/logoConFondo.png" type="image/x-icon">
 </head>
 
 <body>
-  <main>
-    <div class="Register">
-      <form action="/register" method="post">
-        <h1 class="Registrar">Registra tu institución</h1>
-        <p>Nombre de la institución</p>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
-            required placeholder="Instituto **********" />
-        </div>
-        <div class="container mb-3">
-          <div class="mb-1">
-            <label for="Image" class="form-label">Seleccione la foto de perfil de su instituto</label>
-            <input class="form-control" type="file" id="formFile">
-          </div>
-          <img id="frame" src="" class="img-fluid" />
-        </div>
-
-        <p>Categoria</p>
-        <div class="input-group mb-2">
-          <select class="form-select" name="categoria" id="categoria" value="categoria">
-            <option value="1">Publica</option>
-            <option value="2">Privada</option>
-            <option value="3">Semi-privada</option>
-          </select>
-
-        </div>
-
-        <p>Ubicación </p>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
-            required placeholder="Localidad, Provincia." />
-        </div>
-
-        <p>Correo electrónico</p>
-        <div class="input-group mb-3">
-          <input type="email" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
-            required placeholder="correoelectronico@gmail.com" />
-        </div>
-
-        <p>Telefono de contacto</p>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
-            required placeholder="+54 XXXXXXXXXX" />
-        </div>
-
-
-        <p>Sitio web (opcional) </p>
-        <div class="input-group mb-3">
-          <input type="text" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2"
-            required placeholder="https://www.ucp.edu.ar/" />
-        </div>
-
-        <div class="boton">
-          <button class="btn btn-primary" type="submit" target="_blank" style="background-color: #5fbfff; border-color: #5fbfff;
-            ">Enviar</a>
-          </button>
-        </div>
-
-    </div>
-    </form>
-    </div>
-  </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
-  <script src="/js/register-institute.js"></script>
+    <main class="d-flex justify-content-center align-items-center">
+        <form id="formRegister" class="registerForm">
+            <div class="register">
+                <h2 class="mb-2">Regístrate</h2>
+                <label for="text" class="form-label">Nombre</label>
+                <input type="text" id="name" name="name" required class="form-control mb-3">
+                <label for="text" class="form-label">Apellido</label>
+                <input type="text" id="surname" name="surname" required class="form-control mb-3">
+                <label for="email" class="form-label">Correo electrónico</label>
+                <input type="text" id="email" name="email" class="form-control mb-3" aria-describedby="emailHelp">
+                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                <input type="password" id="password" name="password" required class="form-control mb-3">
+                <label for="exampleInputPassword1" class="form-label">Confirme su contraseña</label>
+                <input type="password" id="passwordComfirm" name="passwordComfirm" required class="form-control mb-3">
+                <button type="submit" class="btn btn-success w-100 mb-3">Registrar</button>
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <p class="m-1">¿Ya tenés una cuenta?</p>
+                    <a href="/iniciar-sesion" class="btn btn-outline-primary w-50">Inicia sesión</a>
+                </div>
+            </div>
+        </form>
+    </main>
+    <script src="./js/register.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
