--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrar usuarios</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
@@ -34,10 +35,10 @@
                     </thead>
                     <tbody id="usersList">
                         <% users.forEach(function(user){ %>
-                            <tr>
-                                <td> <!-- Cambié "th" a "td" -->
+                            <tr class="dato" data-id=<%= user.id %>>
+                                <th>
                                     <%= user.id %>
-                                </td>
+                                </th>
                                 <td>
                                     <%= user.firstName %>
                                 </td>
@@ -48,22 +49,63 @@
                                     <%= user.email %>
                                 </td>
                                 <td>
-                                    <button class="btn btn-sm btn-danger" data-id="<%= user.id %>"
-                                        onclick="eliminarReserva(event)">Eliminar</button> <!-- Corregí el botón eliminar -->
-                                    <a href="<%= `/editar-usuario/${user.id}` %>" class="btn btn-warning">Editar</a>
-                                </td>                                
+                                    <button class="btn btn-sm btn-danger" data-id="<%= user.id %>" onclick="eliminarReserva(event)">Eliminar</button> <!-- Corregí el botón eliminar -->
+                                    <button type="button" class="btn btn-warning" data-id="<%= user.id %>" onclick="openModal(event)">Editar</button>
+                                    
+                                </td>
+                                
+                        
                             </tr>
                         <% }) %>
                     </tbody>
                 </table>
             </div>
         </div>
-    </div>
+       
+        <!-- modal -->
 
-<script src="/js/admin.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        <!-- Button trigger modal -->
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <form id="form">
+                <div class="mb-3">
+                    <label for="inputName" class="col-form-label">Nombre:</label>
+                    <input type="text" class="form-control" id="inputFirstName">
+                </div>
+                <div class="mb-3">
+                    <label for="inputLastName" class="col-form-label">Apellido:</label>
+                    <input type="text" class="form-control" id="inputLastName">
+                </div>
+                <div class="mb-3">
+                    <label for="inputEmail" class="col-form-label">Email:</label>
+                    <input type="text" class="form-control" id="inputEmail">
+                </div>
+                <div class="modal-footer" id="myModal">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                    <button type="submit" class="btn btn-primary">Editar</button>
+                </div>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+        <!-- .. -->
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="/js/admin.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
