--- a/src/views/userInstitute/index.ejs
+++ b/src/views/userInstitute/index.ejs
@@ -1,118 +1,124 @@
 <%- include('./partials/header.ejs'); %>
 
-    <header id="cabecera">
-        <nav aria-label="breadcrumb d-flex align-content-center">
-            <ol class="breadcrumb p-3 mb-1" style="height: 70px;">
-                <li class="breadcrumb-item">
-                    <a class="navbar-brand" href="/">
-                        <div class="logo"></div>
-                    </a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">Perfil</li>
-            </ol>
-        </nav>
-    </header>
+<main class="conteiner">
+  <article>
+    <div class="row">
+      <div class="col-md-auto">
+        <img class="shadow p-3 mb-5 bg-body-tertiary rounded-circle " src="/img/home/UNAF.jpg" width="275px"  />
+      </div>
+      <div class="col">
+        <h1>Nombre de la institución</h1>
+        <h5><a class="material-symbols-outlined">location_on</a> Ubicación</h5>
+      </div>
+    </div>
 
+    <br />
 
-    <main>
-        <section>
-            <div class="col-lg-12 pt-2" id="info">
-                <div>
-                    <div class="mb-3 perfil">
-                        <img src="/img/profile_logo.png" width="180" alt="Profile">
-                    </div>
-                </div>
-
-        </section>
-
-        <div class="botones justify-content-center">
-            <button type="button" class="btn-sm boton m-2"><a href="">Editar perfil</a></button>
-            <button type="button" class="btn-sm boton m-2"><a href="/register/register.html">Cerrar
-                    sesión</a></button>
+    <h3>Estadisticas del perfil</h3>
+    <div class="row">
+      <div class="col-3">
+        <div class="bg-secondary">
+          <div class="vector">
+            <a class="material-symbols-outlined"> check </a>
+          </div>
+          <p class="card-text">Estudiantes Activos.</p>
         </div>
+      </div>
 
-        <article>
-            <div class="ubi mb-4 d-flex align-items-center">
-                <h1>UBICACIÓN </h1>
-            </div>
-        </article>
+      <div class="col-3">
+        <div class="vector">
+          <a class="material-symbols-outlined"> visibility </a>
+        </div>
+        <div class="bg-secondary">
+          <p class="card-text">Visualizaciones en los ultimos 7 dias.</p>
+        </div>
+      </div>
 
-        <article>
-            <div class="card mb-5 m-3">
-                <div class="card-body">
-                    <h1>NOMBRE DE INSTITUCION</h1>
-                    <p></p>
-                    <p>[UBICACIÓN]</p>
+      <div class="col-3">
+        <div class="vector">
+          <a class="material-symbols-outlined"> bookmark </a>
+        </div>
+        <div class="bg-secondary">
+          <p class="card-text">ofertas academicas</p>
+        </div>
+      </div>
+    </div>
 
-                    <h2>Descripción del usuario</h2>
-                    <h5 class="card-title"></h5>
-                    <ul>
-                        <li>...</li>
-                        <li>...</li>
-                        <li>...</li>
-                        <li>...</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="card mb-5 m-3">
-                <div class="card-body">
-                    <div class="config">
-                        <h1>Historial de reseñas</h1>
-                        <a class="navbar-brand" href="/home/home.html">
-                            <div class="editar"></div>
-                        </a>
-                    </div>
+    <br />
+    <h3>Información Básica</h3>
 
-                    <p>Tuve el privilegio de ser parte de la comunidad estudiantil en la Universidad "Ejemplo" durante
-                        los
-                        últimos cuatro años, y mi experiencia ha sido increíblemente enriquecedora. Esta institución ha
-                        demostrado
-                        ser un lugar excepcional para el aprendizaje, el crecimiento personal y el desarrollo académico.
-                    </p>
-                </div>
-            </div>
-        </article>
+    <div>
+      <div class="col-6">
+        <div class="col-md-auto align-item-center vector">
+          <a class="material-symbols-outlined"> pin_drop </a>
+        </div>
+        <div class="col bg-secondary">
+          <h1>Ubicación</h1>
+          <p>Formosa, Formosa, Argentina, Ruta Nac. 81 km. 1190</p>
+        </div>
+      </div>
+    </div>
 
-        </article>
+    <br />
+    <div>
+      <div class="col-6">
+        <div class="col-md-auto align-item-center vector">
+          <a class="material-symbols-outlined"> call </a>
+        </div>
+        <div class="col bg-secondary">
+          <h1>Contacto</h1>
+          <p>Telefono: 370567891</p>
+          <p>Email: contacto@gmail.com</p>
+          <p>Web: http://www.google.com</p>
+        </div>
+      </div>
+    </div>
+  </article>
 
-        <div class="listadocarreras">
-            <section class="cuadroCarreras m-1 p-1">
-                <div class="text-center">
-                    <h1>Carreras</h1>
-                </div>
+  <article>
+    <h3>Facultades</h3>
 
-                <div class="botones me-2 justify-content-center">
-                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a href="">Añadir
-                            carrera</a></button>
-                    <button type="button" class="btn-sm boton m-2" style="text-decoration: none"><a href="">Ver todas
-                            las Carreras</a></button>
-                </div>
+    <div class="mt-5 mb-5">
+      <h5>
+        <a class="edit material-symbols-outlined bg-zinc"> edit </a>
+        <a class="material-symbols-outlined"> delete </a> Nombre de una carrera
+      </h5>
+      <h5>
+        <a class="edit material-symbols-outlined bg-zinc"> edit </a>
+        <a class="material-symbols-outlined"> delete </a> Nombre de una carrera
+      </h5>
+      <h5>
+        <a class="edit material-symbols-outlined bg-zinc"> edit </a>
+        <a class="material-symbols-outlined"> delete </a> Nombre de una carrera
+      </h5>
+    </div>
+    <button>Ver todas</button>
 
-                <div class="listadocarrera m-4">
-                    <div class="carrera">
-                        <h3>Licenciatura en Ingeniería de Software</h3>
-                        <p>Años de Duración: 4</p>
-                        <p>Modalidad: Presencial</p>
-                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
-                  "><a href="">Ver más</a></button>
-                    </div>
-                    <div class="carrera">
-                        <h3>Técnico en Programación Web</h3>
-                        <p>Años de Duración: 3</p>
-                        <p>Modalidad: Virtual</p>
-                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
-                  "><a href="">Ver más</a></button>
-                    </div>
-                    <div class="carrera">
-                        <h3> Licenciatura en Administración de Empresas</h3>
-                        <p>Años de Duración: 5</p>
-                        <p>Modalidad: Semipresencial</p>
-                        <button type="button" class="btn btn-secondary btn-sm boton  mb-4" style="text-decoration: none;
-                  "><a href="">Ver más</a></button>
-                    </div>
-                </div>
+    <h3>Carreras</h3>
+    <div class="mt-5 mb-5">
+      <h5>
+        <a class="edit material-symbols-outlined bg-zinc"> edit </a>
+        <a class="material-symbols-outlined"> delete </a> Nombre de una carrera
+      </h5>
+      <h5>
+        <a class="edit material-symbols-outlined bg-zinc"> edit </a>
+        <a class="material-symbols-outlined"> delete </a> Nombre de una carrera
+      </h5>
+      <h5>
+        <a class="edit material-symbols-outlined bg-zinc"> edit </a>
+        <a class="material-symbols-outlined"> delete </a> Nombre de una carrera
+      </h5>
+    </div>
+    <button>Ver todas</button>
 
-            </section>
-    </main>
+    <h3>Galeria de imagenes</h3>
+    <img src="..." class="img-thumbnail" alt="..." />
+    <img src="..." class="img-thumbnail" alt="..." />
+    <img src="..." class="img-thumbnail" alt="..." />
+    <img src="..." class="img-thumbnail" alt="..." />
+    <img src="..." class="img-thumbnail" alt="..." />
+    <button>Ver todas</button>
+  </article>
+</main>
 
-    <%- include('./partials/footer.ejs'); %>
+<%- include('./partials/footer.ejs'); %>
