Feat: se agregaron roles, user, institute y admin

--- a/src/views/formInstitute/partials/ubicationInstitute.ejs
+++ b/src/views/formInstitute/partials/ubicationInstitute.ejs
@@ -13,7 +13,7 @@
             </select>
         </div>
     </div>
-
+    <div id="map"></div>
     <label for="postal_code" class="form-label">Código postal<span style="color: red;">*</span></label>
     <input type="number" class="form-control mb-3" id="postal_code" placeholder="3600" name="postal_code">
 
