--- a/client/public/css/home.css
+++ b/client/public/css/home.css
@@ -119,12 +119,52 @@ footer {
 }
 
 .btn-next {
-  display:grid;
-  place-items:center;
-  top: 100%;  
+  display: grid;
+  place-items: center;
+  top: 100%;
   border-radius: 50%;
 
   background-color: black;
   width: 3rem;
   height: 2rem;
+}
+
+.mainCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.bodyCenter {
+  display: grid;
+  place-items: center;
+  margin-top: 2%;
+  margin-bottom: 5%;
+}
+
+.pagenot {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  text-align: center;
+  line-height: 1.5;
+}
+
+.img-fluid {
+  width: 50vh;
+  height: 50vh;
+}
+
+.botonHome {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3%;
+  margin-bottom: 5%;
 }
