--- a/src/views/userInstitute/index.ejs
+++ b/src/views/userInstitute/index.ejs
@@ -4,7 +4,7 @@
   <article>
     <div class="row">
       <div class="col-md-auto">
-        <img class="shadow p-3 mb-5 bg-body-tertiary rounded-circle " src="/img/home/UNAF.jpg" width="275px"  />
+        <img class="shadow p-3 mb-5 bg-body-tertiary border-rounded-1 " src="/img/home/UNAF.jpg" width="275px"  />
       </div>
       <div class="col">
         <h1>Nombre de la institución</h1>
