--- a/client/public/css/home.css
+++ b/client/public/css/home.css
@@ -164,3 +164,9 @@ footer {
   margin-top: 3%;
   margin-bottom: 5%;
 }
+
+.formAgregarInstituto {
+  display: grid; 
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
