--- a/client/public/css/home.css
+++ b/client/public/css/home.css
@@ -52,7 +52,7 @@ footer {
 }
 
 .card-body {
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .reseñas-cuadro {
@@ -67,12 +67,7 @@ footer {
 
 .persona-reseña {
   width: 60px;
-  border-radius: 50%;
-}
-
-.reseña img {
-  margin-left: 2%;
-  margin-top: 2%;
+  border-radius: 10px;
 }
 
 .section {
@@ -84,7 +79,7 @@ footer {
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   width: 40%;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .options {
