--- a/client/public/css/editInstitute.module.css
+++ b/client/public/css/editInstitute.module.css
@@ -18,10 +18,9 @@
 .nav {
   background-color: #f0f0f0;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 100vh;
 }
 
 .article {
