--- a/client/public/css/instituteCard.module.css
+++ b/client/public/css/instituteCard.module.css
@@ -1,3 +1,22 @@
 .instituteCard {
-  width: 300px;
+  width: auto;
+  position: relative;
+  cursor: pointer;
+  height: auto;
+  margin-bottom: 20px;
+  height: 250px;
+}
+
+.cardBody {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 1;
+}
+
+.cardInterior {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  gap: 10px;
+  height: 100%;
 }
