--- a/client/public/css/search.module.css
+++ b/client/public/css/search.module.css
@@ -1,9 +1,72 @@
 .searchContainer {
-  margin-top: 3%;
-  width: 100%;
-  height: 66vh;
-  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  height: auto;
+  width: 70%;
+  background-color: black;
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-bottom: 0;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+.main {
+}
+.results {
+  display: flex;
+  flex-direction: column;
+}
+.resultsContainer {
+  align-items: flex-start;
+  align-content: start;
+  margin: auto;
+  min-height: 500px;
+  width: 100%;
+  display: grid;
+  justify-content: space-between;
+  grid-template-columns: repeat(4, 23%);
+  grid-template-rows: repeat(2, minmax(200px, 1fr));
+}
+@media (max-width: 1400px) {
+  .searchContainer {
+    width: 80%;
+    margin: 0;
+  }
+
+  .resultsContainer {
+    grid-template-columns: repeat(4, 23%);
+    grid-template-rows: repeat(2, 1fr);
+  }
+}
+@media (max-width: 1200px) {
+  .searchContainer {
+    width: 90%;
+  }
+  .resultsContainer {
+    grid-template-columns: repeat(3, 31%);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+@media (max-width: 1100px) {
+  .searchContainer {
+    width: 90%;
+  }
+  .resultsContainer {
+    grid-template-columns: repeat(3, 31%);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .resultsContainer {
+    grid-template-columns: repeat(2, 48%);
+    grid-template-rows: repeat(4, 1fr);
+  }
+}
+@media (max-width: 690px) {
+  .resultsContainer {
+    grid-template-columns: repeat(1, 100%);
+    grid-template-rows: repeat(8, 1fr);
+  }
 }
